Add missing dependency to qpOASES-3.2.0

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -121,7 +121,8 @@ hpp-model-urdf.configure.dep: hpp-model.install hpp-model-urdf.checkout
 hpp-statistics.configure.dep: hpp-statistics.checkout
 hpp-core.configure.dep: hpp-constraints.install hpp-statistics.install \
 	hpp-core.checkout
-hpp-constraints.configure.dep: hpp-model.install hpp-constraints.checkout
+qpOASES-3.2.0.configure.dep: qpOASES-3.2.0.checkout
+hpp-constraints.configure.dep: qpOASES-3.2.0.install hpp-model.install hpp-constraints.checkout
 hpp-wholebody-step.configure.dep: hpp-constraints.install hpp-walkgen.install \
 	hpp-wholebody-step.checkout
 hpp-manipulation.configure.dep: hpp-core.install hpp-constraints.install \
@@ -303,4 +304,11 @@ OpenSceneGraph-3.4.0.checkout:
 		wget http://www.openscenegraph.org/downloads/stable_releases/OpenSceneGraph-3.4.0/source/OpenSceneGraph-3.4.0.zip;\
 		cd ${SRC_DIR}; unzip OpenSceneGraph-3.4.0.zip;\
 		rm -f OpenSceneGraph-3.4.0.zip;\
+	fi
+
+qpOASES-3.2.0.checkout:
+	if [ -d $(@:.checkout=) ]; then \
+		echo "$(@:.checkout=) already checkout out."; \
+	else \
+	  wget -O - "http://www.coin-or.org/download/source/qpOASES/qpOASES-3.2.0.tgz" | tar xz;\
 	fi
