delete miiwa model and add ipa

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -3,55 +3,51 @@
 # Author: Florent Lamiraux
 #
 
-SVN_USERNAME=
-SVN_PASSWORD=
-
 JRL_REPO=https://github.com/jrl-umi3218
 LAAS_REPO=https://github.com/laas
 HPP_REPO=https://github.com/humanoid-path-planner
-DLR_REPO=https://svn.dlr.de/euroc_c2
 ANNA_REPO=https://github.com/anna-seppala
 SRC_DIR=${DEVEL_DIR}/src
 BUILD_TYPE=Debug
 
-hpp-fcl_branch=euroc
-hpp-fcl_repository=${HPP_REPO}
+hpp-fcl_branch=euroc-devel
+hpp-fcl_repository=${ANNA_REPO}
 
-hpp-util_branch=euroc
-hpp-util_repository=${HPP_REPO}
+hpp-util_branch=euroc-devel
+hpp-util_repository=${ANNA_REPO}
 
-hpp-model_branch=euroc
-hpp-model_repository=${HPP_REPO}
+hpp-model_branch=euroc-devel
+hpp-model_repository=${ANNA_REPO}
 
-hpp-model-urdf_branch=euroc
+hpp-model-urdf_branch=euroc-c2
 hpp-model-urdf_repository=${HPP_REPO}
 
-hpp-statistics_branch=euroc
-hpp-statistics_repository=${HPP_REPO}
+hpp-statistics_branch=euroc-devel
+hpp-statistics_repository=${ANNA_REPO}
 
-hpp-core_branch=euroc
-hpp-core_repository=${HPP_REPO}
+hpp-core_branch=euroc-devel
+hpp-core_repository=${ANNA_REPO}
 
-hpp-template-corba_branch=master
+hpp-template-corba_branch=devel
 hpp-template-corba_repository=${LAAS_REPO}
 
-hpp-corbaserver_branch=euroc
-hpp-corbaserver_repository=${HPP_REPO}
+hpp-corbaserver_branch=euroc-devel
+hpp-corbaserver_repository=${ANNA_REPO}
 
-qpOASES_branch=euroc
+qpOASES_branch=euroc-c2
 qpOASES_repository=${HPP_REPO}
 
-hpp-constraints_branch=euroc
-hpp-constraints_repository=${HPP_REPO}
+hpp-constraints_branch=euroc-devel
+hpp-constraints_repository=${ANNA_REPO}
 
-hpp-walkgen_branch=euroc
+hpp-walkgen_branch=euroc-c2
 hpp-walkgen_repository=${HPP_REPO}
 
-hpp-wholebody-step_branch=euroc
+hpp-wholebody-step_branch=euroc-c2
 hpp-wholebody-step_repository=${HPP_REPO}
 
-hpp-wholebody-step-corba_branch=euroc
-hpp-wholebody-step-corba_repository=${HPP_REPO}
+hpp-wholebody-step-corba_branch=euroc-devel
+hpp-wholebody-step-corba_repository=${ANNA_REPO}
 
 test-hpp_branch=devel
 test-hpp_repository=${HPP_REPO}
@@ -62,63 +58,62 @@ robot_capsule_urdf_repository=${LAAS_REPO}
 robot_model_py_branch=groovy
 robot_model_py_repository=${LAAS_REPO}
 
-hpp-doc_branch=euroc
-hpp-doc_repository=${HPP_REPO}
+hpp-doc_branch=euroc-devel
+hpp-doc_repository=${ANNA_REPO}
 
-hpp-manipulation_branch=euroc
-hpp-manipulation_repository=${HPP_REPO}
+hpp-manipulation_branch=euroc-devel
+hpp-manipulation_repository=${ANNA_REPO}
 
-hpp-manipulation-urdf_branch=euroc
-hpp-manipulation-urdf_repository=${HPP_REPO}
+hpp-manipulation-urdf_branch=euroc-devel
+hpp-manipulation-urdf_repository=${ANNA_REPO}
 
-hpp-manipulation-corba_branch=euroc
-hpp-manipulation-corba_repository=${HPP_REPO}
+hpp-manipulation-corba_branch=euroc-devel
+hpp-manipulation-corba_repository=${ANNA_REPO}
 
-robot_state_chain_publisher_branch=master
+robot_state_chain_publisher_branch=euroc-c2
 robot_state_chain_publisher_repository=${HPP_REPO}
 
-iai_maps_branch=euroc
+iai_maps_branch=euroc-c2
 iai_maps_repository=${HPP_REPO}
 
-hpp_tutorial_branch=euroc-c2
+hpp_tutorial_branch=euroc-devel
 hpp_tutorial_repository=${ANNA_REPO}
 
-hpp_benchmark_branch=euroc
+hpp_benchmark_branch=master
 hpp_benchmark_repository=${HPP_REPO}
 
 collada-dom_branch=master
 collada-dom_repository=${HPP_REPO}
 
-gepetto-viewer_branch=euroc
-gepetto-viewer_repository=${HPP_REPO}
+gepetto-viewer_branch=euroc-devel
+gepetto-viewer_repository=${ANNA_REPO}
 
-gepetto-viewer-corba_branch=euroc
-gepetto-viewer-corba_repository=${HPP_REPO}
+gepetto-viewer-corba_branch=euroc-devel
+gepetto-viewer-corba_repository=${ANNA_REPO}
 
-hpp-gepetto-viewer_branch=euroc
+hpp-gepetto-viewer_branch=euroc-c2
 hpp-gepetto-viewer_repository=${HPP_REPO}
 
-hpp-plot_branch=euroc
-hpp-plot_repository=${HPP_REPO}
+hpp-plot_branch=euroc-devel
+hpp-plot_repository=${ANNA_REPO}
 
-qgv_branch=euroc
-qgv_repository=${HPP_REPO}
+qgv_branch=euroc-devel
+qgv_repository=${ANNA_REPO}
 
-hpp-dlr-miiwa_branch=euroc
-hpp-dlr-miiwa_repository=${HPP_REPO}
+hpp-dlr-ipa_branch=master
+hpp-dlr-ipa_repository=${ANNA_REPO}
+
+ur_description_branch=master
+ur_description_repsitory=${ANNA_REPO}
 
 doxygen-Release_1_8_10_extra_flags= -DCMAKE_BUILD_TYPE=Release
-
-dlr-miiwa-version=0_1_0
-dlr_miiwa_urdf_model_branch=devel
-dlr_miiwa_urdf_model_repository=${TRAC_REPO}
 
 OpenSceneGraph-3.4.0_extra_flags= -DCOLLADA_DYNAMIC_LIBRARY=${DEVEL_DIR}/install/lib/libcollada14dom.so -DCOLLADA_INCLUDE_DIR=${DEVEL_DIR}/install/include/collada-dom -DLIB_POSTFIX=""
 
 hpp-plot_extra_flags= -DQGV_INCLUDE_DIR=${DEVEL_DIR}/install/include/qgv
 
 all: hpp_tutorial.install hpp-manipulation-corba.install \
-	hpp-dlr-miiwa.install hpp-gepetto-viewer.install \
+	hpp-dlr-ipa.install hpp-gepetto-viewer.install \
 	hpp-plot.install
 	${MAKE} hpp-doc.install
 
@@ -160,7 +155,7 @@ robot_capsule_urdf.configure.dep: robot_model_py.install \
 robot_state_chain_publisher.configure.dep: robot_state_chain_publisher.checkout
 iai_maps.configure.dep: robot_state_chain_publisher.install iai_maps.checkout
 hpp_tutorial.configure.dep: hpp-gepetto-viewer.install iai_maps.install \
-	hpp-manipulation-corba.install dlr-miiwa-model.install \
+	hpp-manipulation-corba.install hpp-dlr-ipa.install \
 	hpp_tutorial.checkout
 hpp_benchmark.configure.dep: hpp_benchmark.checkout
 collada-dom.configure.dep: collada-dom.checkout
@@ -176,8 +171,8 @@ hpp-gepetto-viewer.configure.dep: gepetto-viewer-corba.install \
 hpp-plot.configure.dep: hpp-manipulation-corba.install qgv.install \
 	hpp-plot.checkout
 qgv.configure.dep: qgv.checkout
-dlr-miiwa-model.configure.dep: dlr-miiwa-model.checkout
-hpp-dlr-miiwa.configure.dep: dlr-miiwa-model.install hpp-dlr-miiwa.checkout
+hpp-dlr-ipa.configure.dep: ur_description.install hpp-dlr-ipa.checkout
+ur_description.configure.dep: ur_description.checkout
 
 status:
 	@for child_dir in $$(ls ${SRC_DIR}); do \
@@ -204,7 +199,7 @@ update:
 
 %.checkout:
 	if [ -d $(@:.checkout=) ]; then \
-		echo "$(@:.checkout=) already checkout out."; \
+		echo "$(@:.checkout=) already checked out."; \
 	else \
 		git clone --recursive -b ${$(@:.checkout=)_branch} ${$(@:.checkout=)_repository}/$(@:.checkout=); \
 	fi \
@@ -319,103 +314,4 @@ OpenSceneGraph-3.4.0.checkout:
 		rm -f OpenSceneGraph-3.4.0.zip;\
 	fi
 
-dlr-miiwa-model.checkout:
-	if [ -d euroc_c2 ]; then \
-		echo "$(@:.checkout=) already checkout out."; \
-	else \
-		svn checkout --username=${SVN_USERNAME} \
-		--password=${SVN_PASSWORD} ${DLR_REPO}; \
-	fi
 
-dlr-miiwa-model.configure: dlr-miiwa-model.checkout
-	. ${DEVEL_DIR}/install/setup.sh; \
-	echo "configuring for miiwa"
-	cd ${SRC_DIR}/euroc_c2/models/miiwa; \
-	mkdir -p build; \
-	cd ${SRC_DIR}/euroc_c2/models/miiwa/build; \
-	cmake -DCMAKE_INSTALL_PREFIX=${DEVEL_DIR}/install -DCMAKE_BUILD_TYPE=${BUILD_TYPE} .. ; \
-	echo "configuring for schunk_adapter"
-	cd ${SRC_DIR}/euroc_c2/models/schunk_adapter; \
-	mkdir -p build; \
-	cd ${SRC_DIR}/euroc_c2/models/schunk_adapter/build; \
-	cmake -DCMAKE_INSTALL_PREFIX=${DEVEL_DIR}/install -DCMAKE_BUILD_TYPE=${BUILD_TYPE} .. ; \
-	echo "configuring for schunk_pw70"
-	cd ${SRC_DIR}/euroc_c2/models/schunk_pw70; \
-	mkdir -p build; \
-	cd ${SRC_DIR}/euroc_c2/models/schunk_pw70/build; \
-	cmake -DCMAKE_INSTALL_PREFIX=${DEVEL_DIR}/install -DCMAKE_BUILD_TYPE=${BUILD_TYPE} .. ; \
-	echo "configuring for schunk_wsg50"
-	cd ${SRC_DIR}/euroc_c2/models/schunk_wsg50; \
-	mkdir -p build; \
-	cd ${SRC_DIR}/euroc_c2/models/schunk_wsg50/build; \
-	cmake -DCMAKE_INSTALL_PREFIX=${DEVEL_DIR}/install -DCMAKE_BUILD_TYPE=${BUILD_TYPE} .. ; \
-	echo "configuring for dlr_miiwa"
-	cd ${SRC_DIR}/euroc_c2/models/dlr_miiwa; \
-	mkdir -p build; \
-	cd ${SRC_DIR}/euroc_c2/models/dlr_miiwa/build; \
-	cmake -DCMAKE_INSTALL_PREFIX=${DEVEL_DIR}/install -DCMAKE_BUILD_TYPE=${BUILD_TYPE} .. ; \
-	echo "configuring for mako_3d"
-	cd ${SRC_DIR}/euroc_c2/models/mako_3d; \
-	mkdir -p build; \
-	cd ${SRC_DIR}/euroc_c2/models/mako_3d/build; \
-	cmake -DCMAKE_INSTALL_PREFIX=${DEVEL_DIR}/install -DCMAKE_BUILD_TYPE=${BUILD_TYPE} .. ; \
-	echo "configuring for lbr_iiwa_launch"
-	cd ${SRC_DIR}/euroc_c2/models/lbr_iiwa/lbr_iiwa_launch; \
-	mkdir -p build; \
-	cd ${SRC_DIR}/euroc_c2/models/lbr_iiwa/lbr_iiwa_launch/build; \
-	cmake -DCMAKE_INSTALL_PREFIX=${DEVEL_DIR}/install -DCMAKE_BUILD_TYPE=${BUILD_TYPE} .. ; \
-	echo "configuring for lbr_iiwa_gazebo"
-	cd ${SRC_DIR}/euroc_c2/models/lbr_iiwa/lbr_iiwa_gazebo; \
-	mkdir -p build; \
-	cd ${SRC_DIR}/euroc_c2/models/lbr_iiwa/lbr_iiwa_gazebo/build; \
-	cmake -DCMAKE_INSTALL_PREFIX=${DEVEL_DIR}/install -DCMAKE_BUILD_TYPE=${BUILD_TYPE} .. ; \
-	echo "configuring for lbr_iiwa_description"
-	cd ${SRC_DIR}/euroc_c2/models/lbr_iiwa/lbr_iiwa_description; \
-	mkdir -p build; \
-	cd ${SRC_DIR}/euroc_c2/models/lbr_iiwa/lbr_iiwa_description/build; \
-	cmake -DCMAKE_INSTALL_PREFIX=${DEVEL_DIR}/install -DCMAKE_BUILD_TYPE=${BUILD_TYPE} .. ; \
-	echo "configuring for lbr_iiwa_control"
-	cd ${SRC_DIR}/euroc_c2/models/lbr_iiwa/lbr_iiwa_control; \
-	mkdir -p build; \
-	cd ${SRC_DIR}/euroc_c2/models/lbr_iiwa/lbr_iiwa_control/build; \
-	cmake -DCMAKE_INSTALL_PREFIX=${DEVEL_DIR}/install -DCMAKE_BUILD_TYPE=${BUILD_TYPE} .. ;
-	echo "configuring for manta"
-	cd ${SRC_DIR}/euroc_c2/models/manta; \
-	mkdir -p build; \
-	cd ${SRC_DIR}/euroc_c2/models/manta/build; \
-	cmake -DCMAKE_INSTALL_PREFIX=${DEVEL_DIR}/install -DCMAKE_BUILD_TYPE=${BUILD_TYPE} .. ;
-
-dlr-miiwa-model.install: dlr-miiwa-model.configure
-	echo "making for miiwa"; \
-	cd ${SRC_DIR}/euroc_c2/models/miiwa/build; \
-	${MAKE} install; \
-	echo "making for schunk_adapter" ; \
-	cd ${SRC_DIR}/euroc_c2/models/schunk_adapter/build; \
-	${MAKE} install; \
-	echo "making for schunk_pw70" ; \
-	cd ${SRC_DIR}/euroc_c2/models/schunk_pw70/build; \
-	${MAKE} install; \
-	echo "making for schunk_wsg50" ; \
-	cd ${SRC_DIR}/euroc_c2/models/schunk_wsg50/build; \
-	${MAKE} install; \
-	echo "making for dlr_miiwa" ; \
-	cd ${SRC_DIR}/euroc_c2/models/dlr_miiwa/build; \
-	${MAKE} install; \
-	echo "making for mako_3d" ; \
-	cd ${SRC_DIR}/euroc_c2/models/mako_3d/build; \
-	${MAKE} install; \
-	echo "making for lbr_iiwa_launch" ; \
-	cd ${SRC_DIR}/euroc_c2/models/lbr_iiwa/lbr_iiwa_launch/build; \
-	${MAKE} install; \
-	echo "making for lbr_iiwa_gazebo" ; \
-	cd ${SRC_DIR}/euroc_c2/models/lbr_iiwa/lbr_iiwa_gazebo/build; \
-	${MAKE} install; \
-	echo "making for lbr_iiwa_description" ; \
-	cd ${SRC_DIR}/euroc_c2/models/lbr_iiwa/lbr_iiwa_description/build; \
-	${MAKE} install; \
-	echo "making for lbr_iiwa_control" ; \
-	cd ${SRC_DIR}/euroc_c2/models/lbr_iiwa/lbr_iiwa_control/build; \
-	${MAKE} install;
-	echo "making for manta" ; \
-	cd ${SRC_DIR}/euroc_c2/models/manta/build; \
-	${MAKE} install;
