--- a/doc/Makefile
+++ b/doc/Makefile
@@ -6,39 +6,38 @@
 JRL_REPO=https://github.com/jrl-umi3218
 LAAS_REPO=https://github.com/laas
 HPP_REPO=https://github.com/humanoid-path-planner
-ANNA_REPO=https://github.com/anna-seppala
 SRC_DIR=${DEVEL_DIR}/src
 BUILD_TYPE=Debug
 
 hpp-fcl_branch=euroc-c1
-hpp-fcl_repository=${ANNA_REPO}
+hpp-fcl_repository=${HPP_REPO}
 
 hpp-util_branch=euroc-c1
-hpp-util_repository=${ANNA_REPO}
+hpp-util_repository=${HPP_REPO}
 
 hpp-model_branch=euroc-c1
-hpp-model_repository=${ANNA_REPO}
+hpp-model_repository=${HPP_REPO}
 
 hpp-model-urdf_branch=euroc-c1
 hpp-model-urdf_repository=${HPP_REPO}
 
 hpp-statistics_branch=euroc-c1
-hpp-statistics_repository=${ANNA_REPO}
+hpp-statistics_repository=${HPP_REPO}
 
 hpp-core_branch=euroc-c1
-hpp-core_repository=${ANNA_REPO}
+hpp-core_repository=${HPP_REPO}
 
 hpp-template-corba_branch=devel
 hpp-template-corba_repository=${LAAS_REPO}
 
 hpp-corbaserver_branch=euroc-c1
-hpp-corbaserver_repository=${ANNA_REPO}
+hpp-corbaserver_repository=${HPP_REPO}
 
 qpOASES_branch=euroc-c1
 qpOASES_repository=${HPP_REPO}
 
 hpp-constraints_branch=euroc-c1
-hpp-constraints_repository=${ANNA_REPO}
+hpp-constraints_repository=${HPP_REPO}
 
 hpp-walkgen_branch=euroc-c1
 hpp-walkgen_repository=${HPP_REPO}
@@ -47,7 +46,7 @@ hpp-wholebody-step_branch=euroc-c1
 hpp-wholebody-step_repository=${HPP_REPO}
 
 hpp-wholebody-step-corba_branch=euroc-c1
-hpp-wholebody-step-corba_repository=${ANNA_REPO}
+hpp-wholebody-step-corba_repository=${HPP_REPO}
 
 test-hpp_branch=devel
 test-hpp_repository=${HPP_REPO}
@@ -59,16 +58,16 @@ robot_model_py_branch=groovy
 robot_model_py_repository=${LAAS_REPO}
 
 hpp-doc_branch=euroc-c1
-hpp-doc_repository=${ANNA_REPO}
+hpp-doc_repository=${HPP_REPO}
 
 hpp-manipulation_branch=euroc-c1
-hpp-manipulation_repository=${ANNA_REPO}
+hpp-manipulation_repository=${HPP_REPO}
 
 hpp-manipulation-urdf_branch=euroc-c1
-hpp-manipulation-urdf_repository=${ANNA_REPO}
+hpp-manipulation-urdf_repository=${HPP_REPO}
 
 hpp-manipulation-corba_branch=euroc-c1
-hpp-manipulation-corba_repository=${ANNA_REPO}
+hpp-manipulation-corba_repository=${HPP_REPO}
 
 robot_state_chain_publisher_branch=euroc-c1
 robot_state_chain_publisher_repository=${HPP_REPO}
@@ -77,7 +76,7 @@ iai_maps_branch=euroc-c1
 iai_maps_repository=${HPP_REPO}
 
 hpp_tutorial_branch=euroc-c1
-hpp_tutorial_repository=${ANNA_REPO}
+hpp_tutorial_repository=${HPP_REPO}
 
 hpp_benchmark_branch=master
 hpp_benchmark_repository=${HPP_REPO}
@@ -86,22 +85,22 @@ collada-dom_branch=master
 collada-dom_repository=${HPP_REPO}
 
 gepetto-viewer_branch=euroc-c1
-gepetto-viewer_repository=${ANNA_REPO}
+gepetto-viewer_repository=${HPP_REPO}
 
 gepetto-viewer-corba_branch=euroc-c1
-gepetto-viewer-corba_repository=${ANNA_REPO}
+gepetto-viewer-corba_repository=${HPP_REPO}
 
 hpp-gepetto-viewer_branch=euroc-c1
 hpp-gepetto-viewer_repository=${HPP_REPO}
 
 hpp-plot_branch=euroc-c1
-hpp-plot_repository=${ANNA_REPO}
+hpp-plot_repository=${HPP_REPO}
 
 qgv_branch=euroc-c1
-qgv_repository=${ANNA_REPO}
+qgv_repository=${HPP_REPO}
 
-hpp-dlr-ipa_branch=master
-hpp-dlr-ipa_repository=${ANNA_REPO}
+hpp-ipa_branch=master
+hpp-ipa_repository=${HPP_REPO}
 
 ur_description_branch=master
 ur_description_repository=${HPP_REPO}
@@ -113,7 +112,7 @@ OpenSceneGraph-3.4.0_extra_flags= -DCOLLADA_DYNAMIC_LIBRARY=${DEVEL_DIR}/install
 hpp-plot_extra_flags= -DQGV_INCLUDE_DIR=${DEVEL_DIR}/install/include/qgv
 
 all: hpp_tutorial.install hpp-manipulation-corba.install \
-	hpp-dlr-ipa.install hpp-gepetto-viewer.install \
+	hpp-ipa.install hpp-gepetto-viewer.install \
 	hpp-plot.install
 	${MAKE} hpp-doc.install
 
@@ -155,7 +154,7 @@ robot_capsule_urdf.configure.dep: robot_model_py.install \
 robot_state_chain_publisher.configure.dep: robot_state_chain_publisher.checkout
 iai_maps.configure.dep: robot_state_chain_publisher.install iai_maps.checkout
 hpp_tutorial.configure.dep: hpp-gepetto-viewer.install iai_maps.install \
-	hpp-manipulation-corba.install hpp-dlr-ipa.install \
+	hpp-manipulation-corba.install hpp-ipa.install \
 	hpp_tutorial.checkout
 hpp_benchmark.configure.dep: hpp_benchmark.checkout
 collada-dom.configure.dep: collada-dom.checkout
@@ -171,7 +170,7 @@ hpp-gepetto-viewer.configure.dep: gepetto-viewer-corba.install \
 hpp-plot.configure.dep: hpp-manipulation-corba.install qgv.install \
 	hpp-plot.checkout
 qgv.configure.dep: qgv.checkout
-hpp-dlr-ipa.configure.dep: ur_description.install hpp-dlr-ipa.checkout
+hpp-ipa.configure.dep: ur_description.install hpp-ipa.checkout
 ur_description.configure.dep: hpp-corbaserver.install ur_description.checkout
 
 status:
