--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,14 +1,16 @@
 - name: hpp-showcase
+  id: 0
   title: HPP demonstration
   description: "Differents features that can be achieved using the Humanoid Path Planner"
   video:
-  youtube_id: cNfS-CDH76s
+    url: http://homepages.laas.fr/jmirabel/article/iros16hpp/video.mp4
 
 - name: hpp-manipulation-showcase
+  id: 1
   title: HPP manipulation stack demonstration
   description: "Differents features that can be achieved using the manipulation stack of the Humanoid Path Planner"
   video:
-  youtube_id: cNfS-CDH76s
+    url: http://homepages.laas.fr/jmirabel/article/iros16manip/video.mp4
 
 #### Examples of format to use. Remember : 1 image or 1 video. not both
 # - name: pg-ellipses
